@@ -5,6 +5,8 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 23-01-2006 fixed: updating menu overlays on dvdstills took 40 seconds, now instant again
+ - 23-01-2006 added: cpu usage to codecinfo overlay
  - 23-01-2006 added: Karaoke to left and right rather than just center, thanks to erpi99.
  - 22-01-2006 added: Ability to set default settings for all movies from the video OSD.
  - 22-01-2006 changed: Removed some unused/rarely used settings.
